# PyJ3DUltra

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  vcpkg.json
src/: main.cpp
test/: camera.py  imgui.ini  model_viewer.py  requirements.txt  test.py
